[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/Arkaruga/Scripts/Arkaruga-BrickGroup.gd" type="Script" id=1]
[ext_resource path="res://games/Arkaruga/Sprites/Ball/ball-dark.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 325, 81.5 )

[node name="BrickGroup" type="Area2D"]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 315, -82.5 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 0 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, -10, 640, 10 )

[connection signal="area_exited" from="." to="." method="_on_BrickGroup_area_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
